Added controls
added JavaFX GUI
added open button to open flight CSV
added playback controls:
    - play/pause/stop buttons
    - current flight time/total flight time labels
    - current flight time slider
added speed controls:
    - slow/superslow/fast/superfast buttons
    - speed slider
    - custom speed textfield
added alerts